--- a/pages/legal--disclaimers.html
+++ b/pages/legal--disclaimers.html
@@ -92,7 +92,7 @@
     <section class="limited-width">
         <h3 class="disclaimers-title" id="content">Content disclaimers</h3>
         <p>Unless in presence of user-created content, the content hosted on Floofi Systems's platforms is under the
-            responsibility of Mia Starscouts (<a href="mailto:me@floo.fi">me@floo.fi</a>). Even though we make as much effort
+            responsibility of Mia Starscouts (<a href="/contact/start?i=10">contact</a>). Even though we make as much effort
             as possible into providing users with accurate information, Floofi Systems cannot guarantee the
             preciseness of the information provided by our platforms. Therefore, the information on our platforms may be
             inexact or outdated.</p>
@@ -117,9 +117,15 @@
         <h3 class="disclaimers-title" id="data">User data requests</h3>
         <p>Should any Floofi user request access or deletion of user data, an email containing the IP address of the
             user, any device identifiers (if applicable), a Floofi ID user ID (if applicable) needs to be sent from
-            the email address associated with the Floofi ID (if applicable) to the following email address:
-            <a href="mailto:me@floo.fi">me@floo.fi</a>. As per law enforcement regulations, Floofi Systems is unable to
+            the email address associated with the Floofi ID (if applicable) <a href="/contact/start?i=10">using our contact form</a>.
+            As per law enforcement regulations, Floofi Systems is unable to
             delete server logs that are less than 3 months old.</p>
+
+        <h3 class="disclaimers-title" id="copyright">Copyright or DMCA violations</h3>
+        <p>If you feel like one or more intellectual property/ies owned by you or an organization you represent is/are
+            being violated, you can use <a href="/contact/start?i=10">our copyright or DMCA takedown form</a>, and we
+            will get back to you as soon as we can. Note that we may be required to verify your identity, so please
+            prepare sufficient proof (such as an organization-provided email address).</p>
 
         <h3 class="disclaimers-title" id="license">Free, libre and open-source software</h3>
         <p>Is considered "free, libre and open-source" all software that Floofi Systems releases under either the public domain, the
@@ -167,7 +173,7 @@
         <div id="disclaimers-footer">
             <p>Some identifying information is not mentioned on this page for privacy reasons. If you require access to this
                 information, please contact us directly. Floofi reserves the right to amend this page and its content without
-                prior warning and without notice.</p>
+                prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
     </section>
 </section>
