--- a/pages/legal--privacy.html
+++ b/pages/legal--privacy.html
@@ -246,7 +246,7 @@
 
         <div id="disclaimers-footer">
             <p>Floofi reserves the right to amend this page and its content without
-                prior warning and without notice.</p>
+                prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
     </section>
 </section>
