--- a/pages/legal--terms.html
+++ b/pages/legal--terms.html
@@ -251,12 +251,13 @@
 
         <h3 class="disclaimers-title">10. Contact Information</h3>
         <p>
-            For any questions or concerns regarding these Terms of Service or the Privacy Policy, please use the contact form on our website.
+            For any questions or concerns regarding these Terms of Service or the Privacy Policy, please
+            <a href="/contact/start?i=10">use the contact form</a> on our website.
         </p>
 
         <div id="disclaimers-footer">
             <p>Floofi reserves the right to amend this page and its content without
-                prior warning and without notice.</p>
+                prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
     </section>
 </section>
