--- a/me/index.html
+++ b/me/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Me</title>
+    <script>
+        if (location.hostname !== "localhost" && location.hostname !== "me.floo.fi") {
+            location.href = "https://me.floo.fi";
+        }
+    </script>
+    <link rel="stylesheet" href="/assets/css/me.css">
 </head>
 <body>
     It's-a-me! Morio!
