--- a/me/index.html
+++ b/me/index.html
@@ -9,6 +9,7 @@
         }
     </script>
     <link rel="stylesheet" href="/assets/css/me.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="bg"></div>
