--- a/me/index.html
+++ b/me/index.html
@@ -21,8 +21,8 @@
                     <div id="header-content-inner">
                         <h1 id="header-title">Hi, I am Starscouts.</h1>
                         <div id="header-description">
-                            <p>I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.</p>
-                            <div>she/her • [insert species here] • lead @ <a href="https://floo.fi" target="_blank">Floofi</a> • student in CS • 🇫🇷</div>
+                            <p>Also known as Judy or Mia • I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.</p>
+                            <div>she/her • bunny 🐇 • lead @ <a href="https://floo.fi" target="_blank">Floofi</a> • student in CS • 🇫🇷</div>
                         </div>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                     <li>
                         <a href="https://floo.fi" target="_blank" class="header-navigation-item">
                             <span class="header-navigation-item-icon">
-                                <img src="/assets/img/footer.png" alt="Floofi" width="16" height="16">
+                                <img src="/assets/img/footer.png" alt="Floofi" style="width: 16px; height: 16px;">
                             </span>
                             <span class="header-navigation-item-text">
                                 Floofi Systems
