Improve mobile on me.floo.fi

--- a/me/index.html
+++ b/me/index.html
@@ -21,8 +21,8 @@
                     <div id="header-content-inner">
                         <h1 id="header-title">Hi, I am Starscouts.</h1>
                         <div id="header-description">
-                            <p>Also known as Judy or Mia • I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.</p>
-                            <div>she/her • bunny 🐇 • lead @ <a href="https://floo.fi" target="_blank">Floofi</a> • student in CS • 🇫🇷</div>
+                            <p>Also known as Judy or Mia<span class="mobile-break"> • </span>I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.</p>
+                            <div>she/her • bunny 🐇 • lead @ <a href="https://floo.fi" target="_blank">Floofi</a><span class="mobile-break"> • </span>student in CS • 🇫🇷</div>
                         </div>
                     </div>
                 </div>
