Update project list and replace Starscouts with Judy

--- a/app.html
+++ b/app.html
@@ -182,7 +182,7 @@
                         <a href="https://blog.floo.fi" class="navbar-navigation-item-link">Blog</a>
                     </li>
                     <li class="navbar-navigation-item">
-                        <a href="https://me.floo.fi" class="navbar-navigation-item-link">Starscouts</a>
+                        <a href="https://me.floo.fi" class="navbar-navigation-item-link">Judy</a>
                     </li>
                 </ul>
             </div>
