--- a/me/index.html
+++ b/me/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Starscouts: Programming, AI and servers</title>
+    <title>Judy Hopps: Programming, AI and servers</title>
     <script>
         if (location.hostname !== "localhost" && location.hostname !== "me.floo.fi") {
             location.href = "https://me.floo.fi";
@@ -19,9 +19,9 @@
                 <img id="header-avatar" src="https://www.gravatar.com/avatar/890db7c4dc714ef83d95d4291bd40737.jpg?s=256" alt="Avatar">
                 <div id="header-content">
                     <div id="header-content-inner">
-                        <h1 id="header-title">Hi, I am Starscouts.</h1>
+                        <h1 id="header-title">Hi, I am Judy.</h1>
                         <div id="header-description">
-                            <p>Also known as Judy or Mia<span class="mobile-break"> • </span>I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.</p>
+                            <p>Also known as Mia in real life<span class="mobile-break"> • </span>I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.</p>
                             <div>she/her • bunny 🐇 • lead @ <a href="https://floo.fi" target="_blank">Floofi</a><span class="mobile-break"> • </span>student in CS • 🇫🇷</div>
                         </div>
                     </div>
