--- a/pages/credits.html
+++ b/pages/credits.html
@@ -7,7 +7,7 @@
 
     <div id="credits-grid">
         <div class="credits-grid-title">Lead<br>Programming<br>Design</div>
-        <div>Starscouts</div>
+        <div>Judy Hopps</div>
 
         <div class="credits-grid-title">Testing</div>
         <div>ryze312<br>Hailstorm</div>
