Add Polish and update credits

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -9,11 +9,14 @@
         <div class="credits-grid-title">Lead<br>Programming<br>Design</div>
         <div>Judy Hopps</div>
 
-        <div class="credits-grid-title">Testing</div>
-        <div>ryze312<br>Hailstorm</div>
+        <div class="credits-grid-title">Testing (Development)</div>
+        <div>Judy Hopps<br>ryze312<br>Moonglow<br>Hailstorm</div>
+
+        <div class="credits-grid-title">Testing (Early Access)</div>
+        <div>You!</div>
 
         <div class="credits-grid-title">Design Consulting</div>
-        <div>ryze312<br>Hailstorm<br>OliCantDecide<br>Zenko</div>
+        <div>ryze312<br>Hailstorm<br>Moonglow<br>OliCantDecide<br>Zenko</div>
 
         <div class="credits-grid-title">Codename</div>
         <div>OliCantDecide</div>
@@ -25,22 +28,17 @@
         <div>Vercel<br>Belleve Invis</div>
 
         <div class="credits-grid-title">Homepage Artwork</div>
-        <div>My Little Pony/Hasbro<br>Galacon<br>PitouRikou</div>
-
-        <div class="credits-grid-title">Faunerie Artwork</div>
-        <div>marminatoror, 千雲九枭, mrscroup, liaaquilaauroracursed, suplolnope, lightly-san, oofycolorful, rainbow, maren, yakovlev-vad, assturtle, hauntedtuba, hakkerman, captainpudgemuffin, danipenki, t72b, luminousdazzle, petaltwinkle, mirtash, shinodage, draw3, nookprint</div>
+        <div>Bottom: © Disney, All rights reserved<br>Left: PitouRikou<br>
+            Right: © Hasbro, All rights reserved<br><a class="link" href="/contact/start?i=10">Report infrigment</a></div>
 
         <div class="credits-grid-title">Maretime Sans Background</div>
-        <div>My Little Pony/Hasbro</div>
+        <div>Hasbro (My Little Pony)</div>
 
         <div class="credits-grid-title">Wishing Star Product Images</div>
         <div>Amazon</div>
 
-        <div class="credits-grid-title">Debugging Tools</div>
-        <div>Faisal Salman</div>
-
         <div class="credits-grid-title">Special Thanks to</div>
-        <div>JetBrains<br>for giving us access to their tools for free</div>
+        <div>JetBrains for the free tools<br>Google for the money<br>Disney for the inspiration<br>Vercel for the hosting</div>
     </div>
 
     <a id="credits-powered" href="https://vercel.com/?utm_source=powered-by-vercel">
@@ -50,12 +48,18 @@
     <div id="credits-footer">
         <p>Codename "Oliver" • <span id="credits-version">-</span><br>
             © 2024 Floofi Systems, All rights reserved.</p>
-        <p>Floofi, <span id="credits-projects"></span> and their logos are trademarks of Floofi Systems
-            and/or are protected by applicable copyright laws in France and other countries.
+        <p>The Judy Hopps name and character are © Disney, All rights reserved. The Sunny Starscout name and character
+            are © Hasbro, All rights reserved. <a class="link" href="/contact/start?i=10">Contact us to report a
+            copyright infrigment.</a></p>
+        <p>Floofi, <span id="credits-projects"></span>, all the archived projects and their logos are trademarks of Floofi
+            Systems and/or are protected by applicable copyright laws in France and other countries.
         </p>
-        <p>JetBrains, IntelliJ IDEA, PhpStorm, PyCharm, RustRover, WebStorm, JetBrains Toolbox, JetBrains Mono and their
+        <p>Disney, Zootopia, the Judy Hopps name, and their logos are registered trademarks of The Walt Disney Company.
+            JetBrains, IntelliJ IDEA, PhpStorm, PyCharm, RustRover, WebStorm, JetBrains Toolbox, JetBrains Mono and their
             logos are registered trademarks of JetBrains s.r.o. GitHub and its logo are registered trademarks of GitHub,
-            Inc. Vercel and its logo are registered trademarks of Vercel Inc.</p>
+            Inc. Vercel and its logo are registered trademarks of Vercel Inc. Amazon and its logo are registered trademarks
+            of Amazon.com Inc. My Little Pony, Hasbro and their logos are registered trademarks of Hasbro Inc. Google and its
+            logo are registered trademarks of Google LLC.</p>
     </div>
 </section>
 
