Update images and header notice

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,9 +4,9 @@
 
 <section id="home">
     <div id="home-notice">
-        Codename "Oliver" is currently experimental. Please report any issues to the developers.
-        <a href="https://github.com/equestria-dev/oliver" class="btn btn-secondary btn-cta-small" id="home-notice-btn">
-            <span class="btn-cta-text">See Source Code</span>
+        Thank you for being part of the Early Access Program. Please visit various parts of the website on various devices.
+        <a href="mailto:hello@equestria.dev" class="btn btn-secondary btn-cta-small" id="home-notice-btn">
+            <span class="btn-cta-text">Send a Bug Report</span>
         </a>
     </div>
     <div id="home-hero">
