--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
     <title>Floofi</title>
     <link rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
     <header id="mobile-navbar" class="no-border">
