--- a/me/index.html
+++ b/me/index.html
@@ -9,7 +9,7 @@
         }
     </script>
     <link rel="stylesheet" href="/assets/css/me.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
     <div id="loader" style="background-color: black; position: fixed; inset: 0; z-index: 9; display: flex; align-items: center; justify-content: center;">
