High contrast theme for me.floo.fi

--- a/me/index.html
+++ b/me/index.html
@@ -25,7 +25,7 @@
                         <h1 id="header-title">%lang.header%</h1>
                         <div id="header-description">
                             <p>%lang.aka%<span class="mobile-break"> • </span>%lang.description%</p>
-                            <div>%lang.pronouns% • %lang.species% 🐇 • %lang.floofi% @ <a href="https://floo.fi" target="_blank">Floofi</a><span class="mobile-break"> • </span>%lang.job% • 🇫🇷</div>
+                            <div>%lang.pronouns% • %lang.species% <span class="hc">🐇</span> • %lang.floofi% @ <a href="https://floo.fi" target="_blank">Floofi</a><span class="mobile-break"> • </span>%lang.job% • 🇫🇷</div>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <li>
                         <a href="https://floo.fi" target="_blank" class="header-navigation-item">
                             <span class="header-navigation-item-icon">
-                                <img src="/assets/img/footer.png" alt="Floofi" style="width: 16px; height: 16px;">
+                                <img id="floofi-logo" src="/assets/img/footer.png" alt="Floofi" style="width: 16px; height: 16px;">
                             </span>
                             <span class="header-navigation-item-text">
                                 Floofi Systems
